--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,9 @@
         <title>Angular 2 with Babel &mdash; QuickStart</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="/css/main.css" type="text/css" />
-        <script src="/js/vendor.js"></script>
-        <script src="/js/setup.js"></script>
     </head>
     <body>
         <hello>Loading...</hello>
+        <script src="/js/bundle.js"></script>
     </body>
 </html>
