:bug: use relative paths

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
     <head>
         <title>Angular 2 with Babel &mdash; QuickStart</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="/css/main.css" type="text/css" />
+        <link rel="stylesheet" href="./css/main.css" type="text/css" />
     </head>
     <body>
         <hello>Loading...</hello>
-        <script src="/js/bundle.js"></script>
+        <script src="./js/bundle.js"></script>
     </body>
 </html>
