--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 
 <html>
     <head>
-        <title>Angular 2 with Babel &mdash; QuickStart</title>
+        <title>Angular with Babel &mdash; QuickStart</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="./css/main.css" type="text/css" />
+        <link rel="stylesheet" href="css/main.css" type="text/css" />
     </head>
     <body>
         <hello>Loading...</hello>
-        <script src="./js/bundle.js"></script>
+        <script src="js/bundle.js"></script>
     </body>
 </html>
