:package: update deps, add possibility for multiple entries, switch back to webpack-merge

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
     </head>
     <body>
         <hello>Loading...</hello>
-        <script src="js/bundle.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
